--- a/style/style.css
+++ b/style/style.css
@@ -96,3 +96,32 @@ margin-bottom: 23px;
     height: 328px;
     border-radius: 48px;
 }
+.productive_user_section{
+    background-color: rgba(78, 71, 255, 0.1);
+    padding: 50px 142px;
+    border-radius: 24px;
+    margin-bottom: 137px;
+    color: #252432;
+}
+.productive_user_section h1{
+    font-weight: bold;
+    font-size: 38px;
+    font-family: "Raleway", sans-serif;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.user_activity_container{
+    display: flex;
+    gap: 158px;
+    justify-content: space-between;
+}
+.activity_title{
+    font-size: 80px;
+    font-weight: bold;
+    color: #4E47FF;
+}
+.activity_name{
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.5);
+}
