--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,12 @@ padding: 12px 36px;
 border-radius: 10px;
 border: 0;
 color: #FFFFFF;
+cursor: pointer;
+
+}
+.prymary_btn:hover{
+    background-color: #302c94;
+  
 }
 
 
